test/langtools/tools/javac/sealed/PermitsInNoSealedClass.out
PermitsInNoSealedClass.java:10:21: compiler.err.permits.in.no.sealed.class
1 error
